force-app/main/default/objects/X3rd_Party_NFR_Lookup_Table__c/X3rd_Party_NFR_Lookup_Table__c.object-meta.xml
<CustomObject>
    <description>SOX object - Lookup Table used in Product Rules to show/hide products, currently the rules using this lookup are inactive</description>
    <label>3rd Party - NFR - Lookup Table</label>
    <nameField>
        <displayFormat>LT-{00000}</displayFormat>
        <label>3rd Party - NFR - Lookup Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3rd Party - NFR - Lookup Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>