force-app/main/default/objects/X3rd_Party_NFR_Lookup_Table__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>48TB</fullName>
            </value>
            <value>
                <fullName>36TB</fullName>
            </value>
            <value>
                <fullName>32TB</fullName>
            </value>
            <value>
                <fullName>40TB</fullName>
            </value>
            <value>
                <fullName>24TB</fullName>
            </value>
            <value>
                <fullName>30TB</fullName>
            </value>
            <value>
                <fullName>16TB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>