force-app/main/default/objects/X3rd_Party_NFR_Lookup_Table__c/fields/Eligible_for_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in NFR Bundle.</description>
    <label>Eligible for Conversion?</label>
    <type>Checkbox</type>
</CustomField>