force-app/main/default/objects/X3rd_Party_NFR_Lookup_Table__c/fields/Eligible_for_Dense_Nodes__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Dense_Nodes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Dense Nodes</label>
    <type>Checkbox</type>
</CustomField>