force-app/main/default/objects/X3rd_Party_NFR_Lookup_Table__c/fields/NetworkType__c.field-meta.xml
<CustomField>
    <fullName>NetworkType__c</fullName>
    <label>Network Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10GBase-T NIC</fullName>
            </value>
            <value>
                <fullName>SFP+ NIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>