force-app/main/default/objects/X3rd_Party_NFR_Lookup_Table__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>3rd Party - NFR - Lookup Table</relationshipLabel>
    <relationshipName>X3rd_Party_NFR_Lookup_Table</relationshipName>
    <type>Lookup</type>
</CustomField>