force-app/main/default/objects/X3rd_Party_NFR_Lookup_Table__c/fields/Select_Node_Product__c.field-meta.xml
<CustomField>
    <fullName>Select_Node_Product__c</fullName>
    <label>Select Node/Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NFR</fullName>
            </value>
            <value>
                <fullName>Third Party-UCS</fullName>
            </value>
            <value>
                <fullName>Third Party-DELL</fullName>
            </value>
            <value>
                <fullName>Third Party-HPE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>