force-app/main/default/objects/X3rd_Party_NFR_Lookup_Table__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <description>Unique Name for Data Migration</description>
    <formula>Product__r.Name &amp;&quot;#&quot;&amp; TEXT(Type__c) &amp;&quot;#&quot;&amp; TEXT(Select_Node_Product__c) &amp;&quot;#&quot;&amp; TEXT(Capacity__c) &amp;&quot;#&quot;&amp; TEXT(Rubrik_Suite__c) &amp;&quot;#&quot;&amp; TEXT(Payment_Options__c)</formula>
    <inlineHelpText>Unique Name for Data Migration</inlineHelpText>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>