force-app/main/default/objects/X3rd_Party_NFR_Lookup_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Type__c</columns>
    <columns>Capacity__c</columns>
    <columns>Eligible_for_Conversion__c</columns>
    <columns>Eligible_for_Dense_Nodes__c</columns>
    <columns>NetworkType__c</columns>
    <columns>Payment_Options__c</columns>
    <columns>Required__c</columns>
    <columns>Rubrik_Suite__c</columns>
    <columns>Select_Node_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>